[package]
name = "transfer-hook"
version = "0.1.0"
description = "Transfer hook for Paragon Pool token"
edition = "2021"

[lib]
path = "/workspaces/paragonPool/programs/transfer_hook/src/lib.rs"
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-tlv-account-resolution = "0.5.0"
spl-transfer-hook-interface = "0.5.0"